<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="date">Date</string>
    <string name="lineup">Lineup</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="home_team">Home Team</string>
    <string name="zero">0</string>
    <string name="strip">-</string>
    <string name="away_team">Away Team</string>
    <string name="goal">Goal</string>
    <string name="shot">Shot</string>
    <string name="home">HOME</string>
    <string name="away">AWAY</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorite">Favorite</string>

    <array name="leagueName">
        <item>English Premiere League</item>
        <item>German Bundesliga</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
